demo1/elk/tomcat/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: tomcat-demo
  namespace: elk
spec:
  replicas: 2
  selector:
    matchLabels:
      project: www
      k8s-app: java-demo
  template:
    metadata:
      labels:
        project: www
        k8s-app: java-demo
    spec:
      imagePullSecrets:
      - name: registry-pull-secret
      containers:
      - name: tomcat
        image: reg.image.com/project/tomcat-demo:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        resources:
          requests:
            cpu: 0.1
            memory: 200Mi
          limits:
            cpu: 0.3
            memory: 500Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 20
        volumeMounts:
        - name: tomcat-logs
          mountPath: /usr/local/tomcat/logs 

      - name: filebeat
        image: docker.elastic.co/beats/filebeat:7.1.1
        args: [
          "-c", "/etc/filebeat.yml",
          "-e",
        ]
        securityContext:
          runAsUser: 0
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: config
          mountPath: /etc/filebeat.yml
          readOnly: true
          subPath: filebeat.yml
        - name: tomcat-logs 
          mountPath: /usr/local/tomcat/logs

      volumes:
        - name: tomcat-logs
          emptyDir: {}
        - name: config
          configMap:
            defaultMode: 0600
            name: filebeat-config-tomcat
